# Operating-systems

./: .gitignore
10_sockets/datagram/src/: client.c  server.c
10_sockets/stream/src/: CMakeLists.txt  client.c  server.c
1_libraries/memory_managing/: CMakeLists.txt
1_libraries/memory_managing/include/: contacts.h
1_libraries/memory_managing/src/: CMakeLists.txt
1_libraries/time_measuring/: CMakeLists.txt
1_libraries/time_measuring/src/: CMakeLists.txt  contacts.c  main.c  main_dynamic.c
2_files/dirs/: CMakeLists.txt  main.c  main2.c
2_files/locking/: CMakeLists.txt  main.c
2_files/system_library_functions/: CMakeLists.txt  generator.c  main.c  wyniki.txt
3_processes/fork_vfork_clone/: CMakeLists.txt  main_clone_fork.c  main_clone_vfork.c  main_fork.c  main_vfork.c
3_processes/process_tree/: CMakeLists.txt  fcounter.c  fcounter2.c
4_signals/interprocess_communication/: CMakeLists.txt  catcher_a.c  catcher_b.c  catcher_c.c  sender_a.c  sender_b.c  sender_c.c
4_signals/signals_intro/: CMakeLists.txt  printer.c
4_signals/signals_intro/include/: printer.h
5_pipes_fifos/bidirectional_pipe/: main.c
5_pipes_fifos/fifos/: CMakeLists.txt  rdfifo.c  wrfifo.c
5_pipes_fifos/pipes/: main.c
6_message_queues/posix/: CMakeLists.txt  client.c  server.c
6_message_queues/posix/include/: messages.h
6_message_queues/system_v/: CMakeLists.txt  client.c  server.c
6_message_queues/system_v/include/: messages.h
7_shared_memory_semaphores/posix/: CMakeLists.txt
7_shared_memory_semaphores/posix/include/: utils.h
7_shared_memory_semaphores/posix/src/: CMakeLists.txt  host.c  reader.c  utils.c  writer.c
7_shared_memory_semaphores/system_v/: CMakeLists.txt
7_shared_memory_semaphores/system_v/include/: utils.h
7_shared_memory_semaphores/system_v/src/: CMakeLists.txt  consumer.c  host.c  producer.c  utils.c
8_threads/signals_to_threads/: CMakeLists.txt  main_a_1.c  main_a_2.c  main_a_3.c  main_a_4.c  main_a_5.c  main_b.c  zad2.raport
8_threads/threads_cancelling/: CMakeLists.txt  generator.c  main_async.c  main_detached.c  main_sync.c
9_threads_synchronization/aircraft/: main.c
9_threads_synchronization/philosophers/: CMakeLists.txt  main.c
